test/should-fail/vsgc1642.f3
/*
 * @test/compile-error
 */

class A {
    var a = f;
    function f(g1 : String,
        g2 : String,
        g3 : String,
        g4 : String,
        g5 : String,
        g6 : String,
        g7 : String,
        g8 : String,
        g9 : String
        ) : String {
        "asfd"
    }
}

